--- a/test-feyzian.ipynb
+++ b/test-feyzian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "  {'index': 12, 'value': '8', 'active': False, 'Period': None, 'date': None}]}"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        " 'media': None}"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        " 'media': None}"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,6 +590,26 @@
     "    },\n",
     "    \"media\": None,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = \"Binance Futures, ByBit USDT, KuCoin Futures, OKX Futures\\n#DYDX/USDT Take-Profit target 3 ✅\\nProfit: 17.4701% 📈\\nPeriod: 8 Hours 57 Minutes ⏰\"\n",
+    "\n",
+    "msg1 = returnValue(re.search(r\"Entry(.+)\", msg))\n",
+    "\n",
+    "if msg1:\n",
+    "    entry_price = re.search(r\"\\d+\", msg1)\n",
+    "    if entry_price:\n",
+    "        entry_price = int(entry_price.group()) - 1\n",
+    "\n",
+    "# print(entry_price)\n",
+    "# print(entry_price)\n",
+    "\n"
    ]
   }
  ],
