--- a/test-aliBeyro.ipynb
+++ b/test-aliBeyro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "  {'index': 12, 'value': '8', 'active': False, 'Period': None, 'date': None}]}"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        " 'media': None}"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        " 'media': None}"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,6 +590,34 @@
     "    },\n",
     "    \"media\": None,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "string = \"28کلوز\"\n",
+    "\n",
+    "# Extracting the numeric value using regular expression\n",
+    "match = re.search(r'\\d+(\\.\\d+)?', string)\n",
+    "\n",
+    "if match:\n",
+    "    numeric_value = float(match.group())\n",
+    "    print(numeric_value)\n",
+    "else:\n",
+    "    print(\"No numeric value found in the string.\")"
    ]
   }
  ],
