update channels, add order api for Beyranvand and Feyzian

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        " 'media': None}"
       ]
      },
-     "execution_count": 872,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,18 +365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 877,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The word 'stoploss' is present in the string.\n"
+      "2\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "string = \"2x-3x-5x\"\n",
+    "number = re.findall(r'\\d+', string)[0]\n",
+    "\n",
+    "print(number)"
+   ]
   }
  ],
  "metadata": {
