update feyzian, add binance pro channel

--- a/test-binancePro.ipynb
+++ b/test-binancePro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "def isPredictMsg(msg):\n",
-    "\n",
     "    patterns = [\n",
-    "        r\"Symbol: (.+)\",\n",
-    "        r\"Position: (.+)\",\n",
-    "        r\"Leverage: (.+)\",\n",
-    "        r\"Market: (.+)\",\n",
-    "        r\"StopLoss: (.+)\"\n",
+    "        r\"🔥 #(.+)\",\n",
+    "        r\"Take-Profit:\",\n",
+    "        r\"Entry(.+)\",\n",
     "    ]\n",
     "\n",
     "    # Check if all patterns have a value\n",
@@ -43,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,25 +56,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'symbol': 'LDO-USDT',\n",
-       " 'position': 'LONG',\n",
+       "{'symbol': 'CHR-USDT',\n",
+       " 'position': 'SHORT',\n",
        " 'market': 'FUTURES',\n",
        " 'leverage': '20',\n",
-       " 'stopLoss': 2.82735,\n",
-       " 'entry Targets': {'Target 1': '3.1415'},\n",
-       " 'take-Profit Targets': {'Target 1': '3.2056',\n",
-       "  'Target 2': '3.2387',\n",
+       " 'stopLoss': None,\n",
+       " 'entry Targets': {'Target 1': '0.2312'},\n",
+       " 'take-Profit Targets': {'Target 1': '0.2267',\n",
+       "  'Target 2': '0.2245',\n",
        "  'Target 3': '3.2724',\n",
        "  'Target 4': '3.3068'}}"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +104,8 @@
     "leverage_match = re.search(r\"x(\\d+)\", string)\n",
     "market_match = \"FUTURES\"\n",
     "entry_match = re.search(r\"Entry - (.+)\", string)\n",
-    "stopLoss_match = float(returnValue(entry_match)) * 0.9\n",
+    "stopLoss_match = None\n",
+    "# stopLoss_match = float(returnValue(entry_match)) * 0.9\n",
     "\n",
     "\n",
     "profit_values = re.findall(r\"([\\d.]+)\\s*\\(\", string)\n",
@@ -120,56 +125,29 @@
     "    if profit_values\n",
     "    else None,\n",
     "}\n",
+    "print(isPredictMsg(string))\n",
     "\n",
-    "data\n",
-    "# print(data)"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def isEntry(msg, value, symbol):\n",
-    "    entry_price = returnValue(re.search(r\"Entry Price: (.+)\", msg))\n",
-    "    # for control \"average entry\"\n",
-    "    if entry_price:\n",
-    "        entry_price = float(re.findall(r\"\\d+\\.\\d+\", entry_price)[0])\n",
-    "        bigger_number = max(entry_price, float(value))\n",
-    "        smaller_number = min(entry_price, float(value))\n",
-    "\n",
-    "        error = 100 * (1 - (smaller_number / bigger_number)) > 1\n",
-    "        if error:\n",
-    "            return False\n",
-    "    else:\n",
-    "        return False\n",
-    "\n",
-    "    patterns = [\n",
-    "        r\"Entry(.+)\",\n",
-    "        rf\"{symbol}\",\n",
-    "\n",
-    "    ]\n",
-    "\n",
-    "    # Check if all patterns have a value\n",
-    "\n",
-    "    return all(re.search(pattern, msg) for pattern in patterns)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "def isTakeProfit(msg, symbol, index):\n",
-    "   \n",
     "\n",
     "    patterns = [\n",
-    "        r\"Take-Profit(.+)\",\n",
+    "        r\"Price(.+)\",\n",
     "        r\"Profit(.+)\",\n",
-    "        rf\"target {index}\",\n",
-    "        rf\"{symbol}\",\n",
     "    ]\n",
     "\n",
     "    # Check if all patterns have a value\n",
@@ -178,29 +156,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Floats before '(':  ['3.2056', '3.2387', '3.2724', '3.3068']\n",
-      "Floats after 'Take-Profit:':  []\n"
+      "60\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "input_str = \"🔥 #LDO/USDT (Long📈, x20) 🔥\\n\\nEntry - 3.1415\\nTake-Profit:\\n\\n🥉 3.2056 (40% of profit)\\n🥈 3.2387 (60% of profit)\\n🥇 3.2724 (80% of profit)\\n🚀 3.3068 (100% of profit)\\n@DigiLe@persianeliteorg\"\n",
+    "import re\n",
     "\n",
-    "# Find all float numbers before \"(\"\n",
-    "floats_before_parentheses = re.findall(r\"([\\d.]+)\\s*\\(\", input_str)\n",
+    "string = \"#RUNE/USDT (Long📈, x20)\\n\\n✅ Price - 6.072\\n🔝 Profit - 60%\\n@D@persianeliteorg\"\n",
+    "match = re.search(r\"Profit - (\\d+)%\", string)\n",
     "\n",
-    "# Find all float numbers after \"Take-Profit:\"\n",
-    "floats_after_take_profit = re.findall(r\"Take-Profit:\\s*([\\d.]+)\", input_str)\n",
+    "if match:\n",
+    "    profit_number = int(returnValue(match))\n",
+    "    print(profit_number)\n",
+    "else:\n",
+    "    print(\"Profit number not found.\")\n",
     "\n",
-    "print(\"Floats before '(': \", floats_before_parentheses)\n",
-    "print(\"Floats after 'Take-Profit:': \", floats_after_take_profit)"
+    "import math\n",
+    "\n",
+    "result = math.floor(40 / 25)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0147\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0.0025 * 5.889\n",
+    "formatted_result = \"{:.4f}\".format(result)\n",
+    "print(float(formatted_result))"
    ]
   }
  ],
