add sizeAmount func to control size(volume, quantity)

--- a/test.ipynb
+++ b/test.ipynb
@@ -202,6 +202,37 @@
     "print(\"Floats before '(': \", floats_before_parentheses)\n",
     "print(\"Floats after 'Take-Profit:': \", floats_after_take_profit)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sizeAmount(price):\n",
+    "    prices = [\n",
+    "        { 'price':0.01, 'size':2000 },\n",
+    "        { 'price':0.1, 'size':200 },\n",
+    "        { 'price':1, 'size':20 },\n",
+    "        { 'price':5, 'size':2 },\n",
+    "        ]\n",
+    "    \n",
+    "    length = len(prices) - 1\n",
+    "    for i in range(len(prices)):\n",
+    "        if i == length: return prices[0][\"size\"]\n",
+    "        if prices[i][\"price\"] <= price < prices[i+1][\"price\"]:\n",
+    "            size = prices[i+1][\"size\"]\n",
+    "            return size if size is not None else prices[i][\"size\"]\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
