--- a/oogway/test-feyzian.ipynb
+++ b/oogway/test-feyzian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
     "    symbol_match = re.search(r\"Symbol:\\s*#?([A-Z]+)[/\\s]?USDT\", msg, re.IGNORECASE)\n",
     "    \n",
     "    try:\n",
-    "        symbol_value = await sync_to_async(Symbol.objects.get)(asset=returnValue(symbol_match))\n",
+    "        symbol_value = await sync_to_async(Symbol.objects.get)(asset=returnValue(symbol_match).upper())\n",
     "        return symbol_value\n",
     "    except:\n",
     "        return None"
@@ -158,23 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def findSymbol(msg):\n",
-    "    symbol_match = re.search(r\"Symbol:\\s*#?([A-Z]+)[/\\s]?USDT\", msg, re.IGNORECASE)\n",
-    "    \n",
-    "    try:\n",
-    "        symbol_value = await sync_to_async(Symbol.objects.get)(asset=returnValue(symbol_match))\n",
-    "        return symbol_value\n",
-    "    except:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -182,10 +166,10 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "BTC-USDT\n",
+      "None\n",
       "FUTURES\n",
       "LONG\n",
-      "ISOLATED <class 'int'>\n",
+      "ISOLATED 6\n",
       "29010\n",
       "[30000.54, 32000.43, 33000.0]\n",
       "[30010.66, 30016.0, 30019.0, 30040.0]\n"
@@ -219,6 +203,15 @@
     "    \"media\": None,\n",
     "}\n",
     "\n",
+    "msg4 = {\n",
+    "    \"id\": 3084,\n",
+    "    \"date\": \"2023-12-19T12:49:50+00:00\",\n",
+    "    \"reply_to_msg_id\": None,\n",
+    "    \"message\": \"Symbol: #Galausdt Market: FUTURES Position: LONG Leverage: Isolated 6x Entry Targets: 1) 30000.54 2) 32000.43 3) 33000. Take-Profit Targets: 1) 30010.66 2) 30016 3) 30019 4) 30040 StopLoss: 29010 B.Z #test\",    \n",
+    "    \"edit_date\": None,\n",
+    "    \"media\": None,\n",
+    "}\n",
+    "\n",
     "# spot\n",
     "msg2 = {\n",
     "    \"id\": 3084,\n",
@@ -229,7 +222,7 @@
     "    \"media\": None,\n",
     "}\n",
     "\n",
-    "string = msg3[\"message\"]\n",
+    "string = msg4[\"message\"]\n",
     "\n",
     "# ************* FIND IS PREDICT *************\n",
     "isPredict = isPredictMsg(string)\n",
@@ -271,6 +264,32 @@
     "# ************* FIND TAKE PROFITS *************\n",
     "profits = findTakeProfits(string)\n",
     "print(profits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bingx.api import BingxAPI\n",
+    "# from dotenv import dotenv_values\n",
+    "# from bingX.spot import Spot\n",
+    "# from bingX.perpetual.v2 import Perpetual\n",
+    "\n",
+    "# # ****************************************************************************************************************************\n",
+    "\n",
+    "# config = dotenv_values(\".env\")\n",
+    "\n",
+    "\n",
+    "# API_KEY = config[\"API_KEY\"]\n",
+    "# SECRET_KEY = config[\"SECRET_KEY\"]\n",
+    "\n",
+    "# client = Spot(API_KEY, SECRET_KEY)\n",
+    "# client1 = Perpetual(API_KEY, SECRET_KEY)\n",
+    "\n",
+    "# client.symbols()\n",
+    "# # client1.trade_order()"
    ]
   }
  ],
