add datetime and phone number html

--- a/oogway/test-feyzian.ipynb
+++ b/oogway/test-feyzian.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "from itertools import groupby\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "from asgiref.sync import sync_to_async\n",
     "import django\n",
     "import os\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def isPredictMsg(msg):\n",
     "    patterns = [\n",
-    "        r\"Symbol:\\s*#?([A-Z]+)[/\\s]?USDT\",\n",
+    "        r\"Symbol:\\s*#?([A-Z0-9]+)[/\\s]?USDT\",\n",
     "        r\"Take-Profit Targets:([\\s\\S]+?)(StopLoss|Description)\",\n",
     "        r\"Entry Targets:([\\s\\S]+?)Take-Profit\",\n",
     "        r\"Market:\\s*([A-Z]+)\",\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "async def findSymbol(msg):\n",
-    "    symbol_match = re.search(r\"Symbol:\\s*#?([A-Z]+)[/\\s]?USDT\", msg, re.IGNORECASE)\n",
-    "    \n",
+    "    symbol_match = re.search(r\"Symbol:\\s*#?([A-Z0-9]+)[/\\s]?USDT\", msg, re.IGNORECASE)\n",
+    "\n",
     "    try:\n",
     "        symbol_value = await sync_to_async(Symbol.objects.get)(asset=returnValue(symbol_match).upper())\n",
     "        return symbol_value\n",
@@ -158,21 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "None\n",
+      "False\n",
+      "GTC-USDT\n",
       "FUTURES\n",
       "LONG\n",
-      "ISOLATED 6\n",
-      "29010\n",
-      "[30000.54, 32000.43, 33000.0]\n",
-      "[30010.66, 30016.0, 30019.0, 30040.0]\n"
+      "ISOLATED 4\n",
+      "1.079\n",
+      "None\n",
+      "[1.155, 1.178, 1.205, 1.234, 1.271]\n"
      ]
     }
    ],
@@ -212,6 +212,24 @@
     "    \"media\": None,\n",
     "}\n",
     "\n",
+    "msg5 = {\n",
+    "    \"id\": 3084,\n",
+    "    \"date\": \"2023-12-19T12:49:50+00:00\",\n",
+    "    \"reply_to_msg_id\": None,\n",
+    "    \"message\": \"Symbol: #1000BONKUSDT.P\\nMarket: FUTURES\\nPosition: LONG\\nLeverage: Isolated 4x\\n\\nEntry Targets: \\n1) 0.022713\\n2) 0.021730\\n\\nTake-Profit Targets: \\n1) 0.23111\\n2) 0.23689\\n3) 0.24366\\n4) 0.25361\\n\\nStopLoss: 0.21400\\nB.Z\",    \n",
+    "    \"edit_date\": None,\n",
+    "    \"media\": None,\n",
+    "}\n",
+    "\n",
+    "msg6 = {\n",
+    "    \"id\": 3084,\n",
+    "    \"date\": \"2023-12-19T12:49:50+00:00\",\n",
+    "    \"reply_to_msg_id\": None,\n",
+    "    \"message\": \"Symbol: #GTCUSDT.P\\nMarket: FUTURES\\nPosition: LONG\\nLeverage: Isolated 4x\\nOrder Type: Limit\\n\\nEntry Price: \\n1) 1.139\\n2) 1.096\\n\\nTake-Profit Targets: \\n1) 1.155\\n2) 1.178\\n3) 1.205\\n4) 1.234\\n5) 1.271\\n\\nStopLoss: 1.079\\nB.Z\",    \n",
+    "    \"edit_date\": None,\n",
+    "    \"media\": None,\n",
+    "}\n",
+    "\n",
     "# spot\n",
     "msg2 = {\n",
     "    \"id\": 3084,\n",
@@ -222,7 +240,8 @@
     "    \"media\": None,\n",
     "}\n",
     "\n",
-    "string = msg4[\"message\"]\n",
+    "string = msg6[\"message\"]\n",
+    "\n",
     "\n",
     "# ************* FIND IS PREDICT *************\n",
     "isPredict = isPredictMsg(string)\n",
@@ -268,11 +287,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bingX'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# from bingx.api import BingxAPI\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m dotenv_values\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbingX\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspot\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Spot\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbingX\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mperpetual\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mv2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Perpetual\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# ****************************************************************************************************************************\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'bingX'"
+     ]
+    }
+   ],
    "source": [
-    "from bingx.api import BingxAPI\n",
+    "# from bingx.api import BingxAPI\n",
     "# from dotenv import dotenv_values\n",
     "# from bingX.spot import Spot\n",
     "# from bingX.perpetual.v2 import Perpetual\n",
@@ -289,7 +320,110 @@
     "# client1 = Perpetual(API_KEY, SECRET_KEY)\n",
     "\n",
     "# client.symbols()\n",
-    "# # client1.trade_order()"
+    "# client1.trade_order()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "The Take-Profit was reached first.\n",
+      "{'open': '2.7291', 'close': '2.7361', 'high': '2.7361', 'low': '2.7244', 'volume': '19567.00', 'time': 1717155240000}\n",
+      "{'open': '2.5846', 'close': '2.5376', 'high': '2.5949', 'low': '2.5333', 'volume': '14267.00', 'time': 1717783200000}\n",
+      "{'open': '2.7033', 'close': '2.6899', 'high': '2.7033', 'low': '2.6848', 'volume': '53505.00', 'time': 1717132440000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bingx.api import BingxAPI\n",
+    "from dotenv import dotenv_values\n",
+    "\n",
+    "config = dotenv_values(\".env\")\n",
+    "\n",
+    "\n",
+    "API_KEY = config[\"API_KEY\"]\n",
+    "SECRET_KEY = config[\"SECRET_KEY\"]\n",
+    "\n",
+    "bingx =  BingxAPI(API_KEY, SECRET_KEY, timestamp=\"local\")\n",
+    "\n",
+    "\n",
+    "entry_price = 2.6902  \n",
+    "stop_loss = 2.5460     \n",
+    "take_profit = 2.73  \n",
+    "symbol = \"PHB-USDT\" \n",
+    "time_interval = \"1m\"\n",
+    "start_timestamp = 1717063704000\n",
+    "\n",
+    "# 86400000 == milliseconds in a day\n",
+    "next_day = 1717063704000 + 86400000\n",
+    "1717063800000\n",
+    "# res = bingx.get_kline_data(symbol,time_interval ,1718442480000 ,1718528880000,1440)\n",
+    "\n",
+    "reached_target = None\n",
+    "stop_loss_reached = None\n",
+    "entry_reached = None\n",
+    "take_profit_reached = None\n",
+    "finish = True\n",
+    "isEntrySuccess = False\n",
+    "i = 1\n",
+    "\n",
+    "while finish:\n",
+    "    res = bingx.get_kline_data(symbol,time_interval ,start_timestamp ,next_day, 1440)\n",
+    "    for row in reversed(res):\n",
+    "\n",
+    "        if not entry_reached and float(row['low']) <= entry_price:\n",
+    "            entry_reached = row\n",
+    "       \n",
+    "        if bool(entry_reached):\n",
+    "            if not bool(stop_loss_reached) and float(row['low']) <= stop_loss:\n",
+    "                if not reached_target:\n",
+    "                    reached_target = 'Stop-Loss'\n",
+    "                stop_loss_reached = row\n",
+    "            \n",
+    "            if not bool(take_profit_reached) and float(row['high']) >= take_profit:\n",
+    "                if not reached_target:\n",
+    "                    reached_target = 'Take-Profit'\n",
+    "                take_profit_reached = row\n",
+    "          \n",
+    "\n",
+    "        if bool(take_profit_reached and stop_loss_reached):\n",
+    "            finish = False\n",
+    "            break\n",
+    "    start_timestamp = next_day\n",
+    "    next_day = start_timestamp + 86400000\n",
+    "    print(i)\n",
+    "    i += 1\n",
+    "\n",
+    "\n",
+    "if reached_target:\n",
+    "    print(f\"The {reached_target} was reached first.\")\n",
+    "else:\n",
+    "    print(\"Neither stop-loss nor take-profit was reached within the available data.\")\n",
+    "\n",
+    "print(take_profit_reached)\n",
+    "print(stop_loss_reached)\n",
+    "print(entry_reached)\n",
+    "\n",
+    "# The Take-Profit was reached first.\n",
+    "# Take-Profit  {'open': '2.7291', 'close': '2.7361', 'high': '2.7361', 'low': '2.7244', 'volume': '19567.00', 'time': 1717155240000}\n",
+    "# Stop-Loss    {'open': '2.5846', 'close': '2.5376', 'high': '2.5949', 'low': '2.5333', 'volume': '14267.00', 'time': 1717783200000}\n",
+    "# Entry        {'open': '2.7033', 'close': '2.6899', 'high': '2.7033', 'low': '2.6848', 'volume': '53505.00', 'time': 1717132440000}\n",
+    "\n",
+    "\n"
    ]
   }
  ],
